feat(auth): add /auth/users/me endpoint to retrieve authenticated user